--- a/07-shopping-cart/package.json
+++ b/07-shopping-cart/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shopping_cart",
-  "version": "1.0.0",
   "description": "Project Four: Shopping Cart",
+  "version": "1.0.0",
   "author": "Fullstack.io",
   "private": true,
   "scripts": {
@@ -20,9 +20,31 @@
     "@vue/cli-service": "^3.0.0",
     "@vue/cli-plugin-babel": "^3.0.0",
     "@vue/cli-plugin-eslint": "^3.0.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17",
-    "concurrently": "^3.5.0"
-  }
+    "concurrently": "^3.6.1"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
